# nn_by_vlewicki

./: README.md  pyproject.toml
src/nn_by_vlewicki/: __init__.py  layers.py  perceptron.py  utils.py
