[project]
name = "nn-by-vlewicki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aeek True", email = "aeektrue@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
nn-by-vlewicki = "nn_by_vlewicki:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
